@@ -754,6 +754,8 @@ extern	VOID		s19();
 /* lkihx.c */
 extern	VOID		ihx();
 extern	VOID		ihxEntendedLinearAddress(Addr_T);
+extern	VOID		newArea();
+
 /* lkstore.c */
 extern char 		*StoreString( char *str );
 
